package SmartHome.mapper;

public class TimePeriodDTO
{
    public final String startDate;
    public final String endDate;

    public TimePeriodDTO(String startDate, String endDate)
    {
        this.startDate = startDate;
        this.endDate = endDate;
    }

}
